Few bug fixes and order

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,7 +18,15 @@
         <ion-icon name="pizza" item-left></ion-icon>
         Menu
       </ion-item>
-      <ion-item color="none" menuClose="" on-click="goToNotification()" id="menu-list-item15">
+      <ion-item color="none" menuClose="" on-click="goToOrders()" id="menu-list-item17">
+        <ion-icon name="basket" item-left></ion-icon>
+        My Orders
+      </ion-item>
+      <ion-item color="none" menuClose="" on-click="goToTrackOrder()" id="menu-list-item18">
+        <ion-icon name="pin" item-left></ion-icon>
+        Track Order
+      </ion-item>
+      <ion-item color="none" menuClose="" on-click="goToNotification()" id="menu-list-item16">
         <ion-icon name="information" item-left></ion-icon>
         Offers
       </ion-item>
