--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -5,4 +5,13 @@ page-profile {
   .notlogedin {
     text-align: center;
   }
+  .show-login {
+    text-decoration: none;
+  }
+  .show-none {
+    display: none;
+  }
+  .show-logout {
+    text-decoration: none;
+  }
 }
