Few bug fixes and order

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <ion-menu [content]="mainContent">
   <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar>
       <img src="assets/imgs/logo.png">
     </ion-toolbar>
   </ion-header>
