--- a/src/pages/checkout/checkout.scss
+++ b/src/pages/checkout/checkout.scss
@@ -1,3 +1,16 @@
 page-checkout {
-
+  .coupon {
+    width: 80%;
+    padding: 0;
+    margin: 0;
+    float: left;
+    display: inline;
+  }
+  .coupon-btn {
+    display: inline;
+    width: 20%;
+    float: right;
+    padding: 0;
+    margin: 0;
+  }
 }
