--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,6 +4,7 @@ page-home {
     width: 100%;
     height: 200px;
 
+
   }
   .home-grid {
     margin-left: 3%;
@@ -64,6 +65,7 @@ page-home {
   }
   .slide-wraper {
     margin: 0;
+    padding: 0;
   }
   .slide-wraper .text {
     position: absolute;
@@ -72,6 +74,20 @@ page-home {
     z-index: 1;
     color: #eaffcc;
 
+  }
+  .slide-img {
+    width: 70%;
+    float: left;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+  }
+  slide-text {
+    width: 30%;
+    float: right;
+    padding: 0;
+    margin:0;
+    height: 100%;
   }
 
 }
