--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,10 +33,12 @@ $app-direction: ltr;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 //#488aff
+
+//#ea6153
 //
 
 $colors: (
-  primary:    #724c41,
+  primary:    #f53d3d,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
