Login,cart,order bug fixed. Application crash bug fixed

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,7 @@ $app-direction: ltr;
 //
 
 $colors: (
-  primary:    #f53d3d,
+  primary:    #a51c21,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
