--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -68,11 +68,17 @@ page-home {
     padding: 0;
   }
   .slide-wraper .text {
+    float: right;
     position: absolute;
-    top: 30%;
+    width: 45%;
+    height: 45%;
+    top:0 ;
+    right: 0;
+    margin-top: 8px;
+    margin-right: 8px;
     text-align: center;
     z-index: 1;
-    color: #eaffcc;
+
 
   }
   .slide-img {
@@ -85,9 +91,16 @@ page-home {
   slide-text {
     width: 30%;
     float: right;
-    padding: 0;
+    padding: 5px;
     margin:0;
     height: 100%;
+    background-color: #ba9d37;
+  }
+  .code {
+    text-align: center;
+    background-color: #a51c21;
+    color: #ffffff;
+    padding: 5px;
   }
 
 }
